--- a/package.json
+++ b/package.json
@@ -1,11 +1,93 @@
 {
   "name": "mr-jam",
-  "version": "1.0.0",
-  "main": "index.js",
-  "description": "This repository contains the frontend and lamda functions code.",
-  "scripts": {
-    "build:fonctions": "cd functions && yarn build",
-    "build:frontend": "cd frontend && yarn build"
+  "version": "0.1.0",
+  "dependencies": {
+    "@apollo/client": "3.0.0-beta.38",
+    "@date-io/date-fns": "1.x",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@material-ui/pickers": "^3.2.10",
+    "@mdi/js": "^5.0.45",
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.19.2",
+    "classnames": "^2.2.6",
+    "date-fns": "^2.11.0",
+    "graphql": "^14.6.0",
+    "lodash": "^4.17.15",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.1",
+    "typescript": "~3.7.2"
   },
-  "license": "MIT"
+  "scripts": {
+    "start": "react-scripts start",
+    "start:dev": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+    "test:cover": "CI=true NODE_ENV=test react-scripts test --coverage --testResultsProcessor=jest-sonar-reporter --env=jest-environment-jsdom-sixteen",
+    "lint": "eslint src",
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write src/"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^7.1.3",
+    "@testing-library/jest-dom": "^5.3.0",
+    "@testing-library/react": "^10.0.1",
+    "@types/css-mediaquery": "^0.1.0",
+    "css-mediaquery": "^0.1.2",
+    "husky": ">=4",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "jest-sonar-reporter": "^2.0.0",
+    "lint-staged": ">=10",
+    "prettier": "2.0.1",
+    "netlify-lambda": "^1.6.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,js,css,md}": "prettier --write"
+  },
+  "prettier": {
+    "useTabs": false,
+    "tabWidth": 2
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!**/src/index.ts",
+      "!**/src/setupProxy.ts",
+      "!**/src/setupTests.ts",
+      "!**/src/utils/serviceWorker.ts"
+    ]
+  },
+  "jestSonar": {
+    "reportPath": "coverage",
+    "reportFile": "test-reporter.xml",
+    "indent": 4
+  }
 }
