add redirects to netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,5 @@
   command = "yarn build"
   functions = "functions/dist" #  netlify-lambda reads this
   publish = "build"
+[[redirects]]
+  /*    /index.html   200
