add maybe correct redirects to netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,4 +3,6 @@
   functions = "functions/dist" #  netlify-lambda reads this
   publish = "build"
 [[redirects]]
-  /*    /index.html   200
+  from = "/*"
+  to = "/index.html"
+  status = 200
