--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1",
+    "react-scripts": "^3.4.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "start:dev": "react-scripts start",
+    "start:lambda": "netlify-lambda serve -c src/lambda/webpack.config.js src/lambda",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "test:cover": "CI=true NODE_ENV=test react-scripts test --coverage --testResultsProcessor=jest-sonar-reporter --env=jest-environment-jsdom-sixteen",
@@ -61,8 +62,8 @@
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": ">=10",
-    "prettier": "2.0.1",
-    "netlify-lambda": "^1.6.3"
+    "netlify-lambda": "^1.6.3",
+    "prettier": "2.0.1"
   },
   "husky": {
     "hooks": {
