--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:dev": "react-scripts start",
+    "start:app": "react-scripts start",
+    "build:app": "react-scripts build",
     "start:lambda": "netlify-lambda serve -c src/lambda/webpack.config.js src/lambda",
     "build:lambda": "netlify-lambda build -c src/lambda/webpack.config.js src/lambda",
-    "build": "react-scripts build",
+    "build": "yarn build:app && yarn build:lambda",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "test:cover": "CI=true NODE_ENV=test react-scripts test --coverage --testResultsProcessor=jest-sonar-reporter --env=jest-environment-jsdom-sixteen",
     "lint": "eslint src",
