--- a/package.json
+++ b/package.json
@@ -66,7 +66,12 @@
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": ">=10",
     "netlify-lambda": "^1.6.3",
-    "prettier": "2.0.1"
+    "nodemon-webpack-plugin": "^4.3.1",
+    "prettier": "2.0.1",
+    "ts-loader": "^6.2.2",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-node-externals": "^1.7.2"
   },
   "husky": {
     "hooks": {
