--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "start:app": "react-scripts start",
     "build:app": "react-scripts build",
     "start:lambda": "netlify-lambda serve -c src/lambda/webpack.config.js src/lambda",
-    "build:lambda": "netlify-lambda build -c src/lambda/webpack.config.js src/lambda",
+    "build:lambda": "cd src/lambda && yarn && cd ../.. && netlify-lambda build -c src/lambda/webpack.config.js src/lambda",
     "build": "yarn build:app && yarn build:lambda",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "test:cover": "CI=true NODE_ENV=test react-scripts test --coverage --testResultsProcessor=jest-sonar-reporter --env=jest-environment-jsdom-sixteen",
@@ -66,12 +66,7 @@
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": ">=10",
     "netlify-lambda": "^1.6.3",
-    "nodemon-webpack-plugin": "^4.3.1",
-    "prettier": "2.0.1",
-    "ts-loader": "^6.2.2",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2"
+    "prettier": "2.0.1"
   },
   "husky": {
     "hooks": {
