--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ node_js:
 stages:
     - test
     - build
-    - name: deploy
-      if: branch = master
+    # - name: deploy
+    #   if: branch = master
 
 install:
     # install deps
@@ -23,11 +23,11 @@ jobs:
             # build app and functions
             - yarn build
 
-        - stage: deploy
-          provider: netlify
-          site: a2d722ce-ad9e-4849-a48d-78041460f264
-          dir: build
-          functions: src/lambda/dist
-          auth: $NETLIFY_AUTH_TOKEN
-          edge: true
-          prod: true
+        # - stage: deploy
+        #   provider: netlify
+        #   site: a2d722ce-ad9e-4849-a48d-78041460f264
+        #   dir: build
+        #   functions: src/lambda/dist
+        #   auth: $NETLIFY_AUTH_TOKEN
+        #   edge: true
+        #   prod: true
