--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "install:all": "cd src/lambda && yarn && cd ../.. && yarn",
+    "start:all": "npm-run-all --parallel start:app start:lambda",
     "start:app": "react-scripts start",
     "build:app": "react-scripts build",
     "start:lambda": "netlify-lambda serve -c src/lambda/webpack.config.js src/lambda",
     "build:lambda": "cd src/lambda && yarn && cd ../.. && netlify-lambda build -c src/lambda/webpack.config.js src/lambda",
-    "build": "yarn build:app && yarn build:lambda",
+    "build:all": "yarn build:app && yarn build:lambda",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "test:cover": "CI=true NODE_ENV=test react-scripts test --coverage --testResultsProcessor=jest-sonar-reporter --env=jest-environment-jsdom-sixteen",
     "lint": "eslint src",
@@ -66,6 +67,7 @@
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": ">=10",
     "netlify-lambda": "^1.6.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.0.1"
   },
   "husky": {
