--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "start:client": "yarn workspace client start",
     "test:client": "yarn workspace client test",
     "test:client:cover": "yarn workspace client test:cover",
+    "build:client": "yarn workspace client build",
     "start:lambda": "yarn workspace lambda start",
     "test:lambda": "yarn workspace lambda test",
     "test:lambda:cover": "yarn workspace lambda test:cover",
+    "build:lambda": "yarn workspace lambda build",
     "start:all": "npm-run-all --parallel start:client start:lambda",
-    "test:cover": "npm-run-all --parallel test:client:cover test:lambda:cover"
+    "test:cover": "npm-run-all --parallel test:client:cover test:lambda:cover",
+    "build:all": "npm-run-all --parallel build:client build:lambda"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
