chore(MR-JAM-10): update install script in .travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ stages:
 
 install:
     # install deps
-    - yarn install && cd src/lambda && yarn install && cd ../..
+    - yarn install
 
 jobs:
     include:
