--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 stages:
     - test
     - build
-    # - name: deploy
+    - name: deploy
     #   if: branch = master
 
 install:
@@ -23,11 +23,11 @@ jobs:
             # build app and functions
             - yarn build:all
 
-        # - stage: deploy
-        #   provider: netlify
-        #   site: a2d722ce-ad9e-4849-a48d-78041460f264
-        #   dir: build
-        #   functions: src/lambda/dist
-        #   auth: $NETLIFY_AUTH_TOKEN
-        #   edge: true
+        - stage: deploy
+          provider: netlify
+          site: a2d722ce-ad9e-4849-a48d-78041460f264
+          dir: packages/client/build
+          functions: packages/lambda/dist
+          auth: $NETLIFY_AUTH_TOKEN
+          edge: true
         #   prod: true
