--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build:lambda": "yarn workspace lambda build",
     "start:all": "npm-run-all --parallel start:client start:lambda",
     "test:cover": "npm-run-all --parallel test:client:cover test:lambda:cover",
-    "build:all": "npm-run-all --parallel build:client build:lambda"
+    "build:all": "npm-run-all --parallel build:client build:lambda",
+    "test": "echo 'LOL'"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
