--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start:all": "npm-run-all --parallel start:client start:lambda",
     "test:cover": "npm-run-all --parallel test:client:cover test:lambda:cover",
     "build:all": "npm-run-all --parallel build:client build:lambda",
-    "test": "echo 'LOL'"
+    "test": "echo 'LOL'",
+    "build": "yarn build:all"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
