--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "test:lambda:cover": "yarn workspace lambda test:cover",
     "test:cover": "npm-run-all --parallel test:client:cover test:lambda:cover",
     "build:lambda": "yarn workspace lambda build",
-    "build:all": "yarn install && npm-run-all --parallel build:client build:lambda"
+    "build:all": "yarn install && npm-run-all --parallel build:client build:lambda",
+    "contracts:compile": "yarn workspace smart-contracts compile",
+    "contracts:deploy:dev": "yarn workspace smart-contracts deploy:dev",
+    "contracts:console:dev": "yarn workspace smart-contracts console:dev",
+    "ganache:start": "yarn workspace smart-contracts ganache:start",
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
