--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "contracts:compile": "yarn workspace smart-contracts compile",
     "contracts:deploy:dev": "yarn workspace smart-contracts deploy:dev",
     "contracts:console:dev": "yarn workspace smart-contracts console:dev",
-    "ganache:start": "yarn workspace smart-contracts ganache:start",
+    "ganache:start": "yarn workspace smart-contracts ganache:start"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
