--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "date-fns": "^2.11.0",
+    "ethers": "^4.0.47",
     "graphql": "^14.6.0",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
