--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "date-fns": "^2.11.0",
+    "ethers": "^4.0.47",
     "graphql": "^14.6.0",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
@@ -55,6 +56,7 @@
     "@testing-library/dom": "^7.1.3",
     "@testing-library/jest-dom": "^5.3.0",
     "@testing-library/react": "^10.0.1",
+    "@testing-library/react-hooks": "^3.2.1",
     "@types/css-mediaquery": "^0.1.0",
     "css-mediaquery": "^0.1.2",
     "husky": ">=4",
@@ -62,7 +64,8 @@
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": ">=10",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.0.1"
+    "prettier": "2.0.1",
+    "react-test-renderer": "^16.13.1"
   },
   "husky": {
     "hooks": {
