--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "ganache:start": "yarn workspace smart-contracts ganache:start"
   },
   "devDependencies": {
+    "husky": "^4.2.5",
     "npm-run-all": "^4.1.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn test:client:cover"
+    }
   }
 }
