--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -6,7 +6,9 @@
     "start": "netlify-lambda serve -c webpack.lambda.js .",
     "test": "NODE_ENV=test jest src --watch",
     "test:cover": "NODE_ENV=test jest src --coverage",
-    "build": "netlify-lambda build -c webpack.lambda.js ."
+    "build": "netlify-lambda build -c webpack.lambda.js .",
+    "prettier": "prettier --write src/",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "apollo-datasource-rest": "^0.6.9",
