--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -36,7 +36,8 @@
     "test:cover": "CI=true NODE_ENV=test react-scripts test --coverage --testResultsProcessor=jest-sonar-reporter --env=jest-environment-jsdom-sixteen",
     "lint": "eslint src",
     "eject": "react-scripts eject",
-    "prettier": "prettier --write src/"
+    "prettier": "prettier --write src/",
+    "precommit": "lint-staged"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -68,7 +69,7 @@
     "react-test-renderer": "^16.13.1"
   },
   "lint-staged": {
-    "*.{ts,js,css,md}": "prettier --write"
+    "*.{ts,tsx,js,css,md}": "prettier --write"
   },
   "prettier": {
     "useTabs": false,
