fix(MR-JAM-28): add precommit hook with prettier at root level (#29)
* fix(MR-JAM-28): add husky to root and delete in packages

* fix(MR-JAM-28): add precommit commands and trigger

* fix(MR-JAM-28): apply prettier

--- a/package.json
+++ b/package.json
@@ -21,9 +21,18 @@
     "contracts:compile": "yarn workspace smart-contracts compile",
     "contracts:deploy:dev": "yarn workspace smart-contracts deploy:dev",
     "contracts:console:dev": "yarn workspace smart-contracts console:dev",
-    "ganache:start": "yarn workspace smart-contracts ganache:start"
+    "ganache:start": "yarn workspace smart-contracts ganache:start",
+    "precommit:client": "yarn workspace client precommit",
+    "precommit:lambda": "yarn workspace lambda precommit",
+    "precommit:all": "npm-run-all precommit:client precommit:lambda"
   },
   "devDependencies": {
+    "husky": "^4.2.5",
     "npm-run-all": "^4.1.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn precommit:all"
+    }
   }
 }
