--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -36,7 +36,8 @@
     "test:cover": "CI=true NODE_ENV=test react-scripts test --coverage --testResultsProcessor=jest-sonar-reporter --env=jest-environment-jsdom-sixteen",
     "lint": "eslint src",
     "eject": "react-scripts eject",
-    "prettier": "prettier --write src/"
+    "prettier": "prettier --write src/",
+    "precommit": "lint-staged"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -60,7 +61,6 @@
     "@testing-library/react-hooks": "^3.2.1",
     "@types/css-mediaquery": "^0.1.0",
     "css-mediaquery": "^0.1.2",
-    "husky": ">=4",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": ">=10",
@@ -68,13 +68,8 @@
     "prettier": "2.0.1",
     "react-test-renderer": "^16.13.1"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "*.{ts,js,css,md}": "prettier --write"
+    "*.{ts,tsx,js,css,md}": "prettier --write"
   },
   "prettier": {
     "useTabs": false,
