--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -6,7 +6,9 @@
     "start": "netlify-lambda serve -c webpack.lambda.js .",
     "test": "NODE_ENV=test jest src --watch",
     "test:cover": "NODE_ENV=test jest src --coverage",
-    "build": "netlify-lambda build -c webpack.lambda.js ."
+    "build": "netlify-lambda build -c webpack.lambda.js .",
+    "prettier": "prettier --write src/",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "apollo-datasource-rest": "^0.6.9",
@@ -17,7 +19,6 @@
   "devDependencies": {
     "@types/jest": "^25.1.4",
     "dotenv": "^8.2.0",
-    "husky": ">=4",
     "jest": "^25.2.4",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": ">=10",
@@ -30,11 +31,6 @@
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{ts,js,css,md}": "prettier --write"
