feat(MR-JAM-32): add admin dialog in order to invite users

--- a/packages/smart-contracts/package.json
+++ b/packages/smart-contracts/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "compile": "truffle compile",
-    "deploy:dev": "truffle deploy",
-    "console:dev": "truffle console",
+    "deploy:dev": "truffle deploy --network development --reset",
+    "console:dev": "truffle console --network development",
     "ganache:start": "ganache-cli -p 7545"
   },
   "devDependencies": {
